--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Shop Black Friday deals
     </div>
     <div class="box4 box">
         <div class="box-content">
-            <h2>Shop Black Friday deals</h2>
+            <h2>Black Friday deals</h2>
     <div class="box-img" style="background-image: url('box 4.jpg');"></div>
         <p>Shop now</p>
         </div>
@@ -98,7 +98,7 @@ Shop Black Friday deals
     <div class="container">
     <div class="box5">
         <div class="box-content">
-            <h3>Here come Holiday Specials</h3>
+            <h3>Holiday Specials</h3>
     <div class="box-img1" style="background-image: url('box 9,1.jpg');"></div>
         </div>
     </div>
@@ -109,27 +109,27 @@ Shop Black Friday deals
     </div>
     <div class="box5">
         <div class="box-content">
-    <div class="box-img3" style="background-image: url('box 9,3.jpg');"></div>
+    <div class="box-img2" style="background-image: url('box 9,3.jpg');"></div>
         </div>
     </div>
     <div class="box5">
         <div class="box-content">
-    <div class="box-img4" style="background-image: url('box 9,4.jpg');"></div>
+    <div class="box-img2" style="background-image: url('box 9,4.jpg');"></div>
         </div>
     </div>
     <div class="box5">
         <div class="box-content">
-    <div class="box-img5" style="background-image: url('box 9,5.jpg');"></div>
+    <div class="box-img2" style="background-image: url('box 9,5.jpg');"></div>
         </div>
     </div>
     <div class="box5">
         <div class="box-content">
-    <div class="box-img6" style="background-image: url('box 9,6.jpg');"></div>
+    <div class="box-img2" style="background-image: url('box 9,6.jpg');"></div>
         </div>
     </div>
     <div class="box5">
         <div class="box-content">
-    <div class="box-img7" style="background-image: url('box 9,7.jpg');"></div>
+    <div class="box-img2" style="background-image: url('box 9,7.jpg');"></div>
         </div>
     </div>
 </div>
@@ -138,7 +138,7 @@ Shop Black Friday deals
     <div class="box6">
         <div class="box-content">
             <span>Deals on PCs and gaming</span>
-    <div class="box-img8" style="background-image: url('box 22, 1.jpg');"></div>
+    <div class="box-img3" style="background-image: url('box 22, 1.jpg');"></div>
     </div>
     <div class="text">
     <a><span>$</span>249</a><p class="price">List: <span>$699.99</span></p>
@@ -148,17 +148,17 @@ Shop Black Friday deals
     </div>
     <div class="box6">
         <div class="box-content">
-    <div class="box-img9" style="background-image: url('box 22, 2.jpg');"></div>
+    <div class="box-img4" style="background-image: url('box 22, 2.jpg');"></div>
         </div>
         <div class="text">
             <a><span>$</span>764</a><p class="price">List: <span>$899.99</span></p>
-                <P>PowerColor Hellhound AMD...
+                <P>Power Color Hellhound AMD Device...
                 </P>
             </div>
     </div>
     <div class="box6">
         <div class="box-content">
-    <div class="box-img10" style="background-image: url('box 22, 3.jpg');"></div>
+    <div class="box-img4" style="background-image: url('box 22, 3.jpg');"></div>
         </div>
         <div class="text">
             <a><span>$</span>119</a><p class="price">List: <span>$204.95</span></p>
@@ -168,7 +168,7 @@ Shop Black Friday deals
     </div>
     <div class="box6">
         <div class="box-content">
-    <div class="box-img11" style="background-image: url('box 22, 4.jpg');"></div>
+    <div class="box-img4" style="background-image: url('box 22, 4.jpg');"></div>
         </div>
         <div class="text">
             <a><span>$</span>1,299</a><p class="price">List: <span>$1,699.99</span></p>
@@ -178,17 +178,17 @@ Shop Black Friday deals
     </div>
     <div class="box6">
         <div class="box-content">
-    <div class="box-img12" style="background-image: url('box 22, 5.jpg');"></div>
+    <div class="box-img4" style="background-image: url('box 22, 5.jpg');"></div>
         </div>
         <div class="text">
             <a><span>$</span>1,099</a><p class="price">List: <span>$1,399.99</span></p>
-                <P>ASUS ROG Strix G16 (2024)....
+                <P>ASUS ROG Strix G16 (2024) Device....
                 </P>
             </div>
     </div>
     <div class="box6">
         <div class="box-content">
-    <div class="box-img13" style="background-image: url('box 22, 6.jpg');"></div>
+    <div class="box-img4" style="background-image: url('box 22, 6.jpg');"></div>
         </div>
         <div class="text">
             <a><span>$</span>609</a><p class="price">List: <span>$899.99</span></p>
@@ -275,7 +275,7 @@ Shop Black Friday deals
     </div>
     <div class="foot-panel4">
         <div class="foot-panel15">
-            <div class="foot-box1">
+            <div class="foot-box">
             <span>Amazon </span>
             <br>
             <span>Music</span>
@@ -283,7 +283,7 @@ Shop Black Friday deals
             <p>millions</p>
             <p>of songs</p>
         </div>
-        <div class="foot-box2">
+        <div class="foot-box">
             <span>Amazon </span>
             <br>
             <span>Music</span>
@@ -291,7 +291,7 @@ Shop Black Friday deals
             <p>millions</p>
             <p>of songs</p>
         </div>
-        <div class="foot-box3">
+        <div class="foot-box">
             <span>Amazon </span>
             <br>
             <span>Music</span>
@@ -299,7 +299,7 @@ Shop Black Friday deals
             <p>millions</p>
             <p>of songs</p>
         </div>
-        <div class="foot-box4">
+        <div class="foot-box">
             <span>Amazon </span>
             <br>
             <span>Music</span>
@@ -307,7 +307,7 @@ Shop Black Friday deals
             <p>millions</p>
             <p>of songs</p>
         </div>
-        <div class="foot-box5">
+        <div class="foot-box">
             <span>Amazon </span>
             <br>
             <span>Music</span>
@@ -315,7 +315,7 @@ Shop Black Friday deals
             <p>millions</p>
             <p>of songs</p>
         </div>
-        <div class="foot-box6">
+        <div class="foot-box">
             <span>Amazon </span>
             <br>
             <span>Music</span>
@@ -323,7 +323,7 @@ Shop Black Friday deals
             <p>millions</p>
             <p>of songs</p>
         </div>
-        <div class="foot-box7">
+        <div class="foot-box">
             <span>Amazon </span>
             <br>
             <span>Music</span>
@@ -333,7 +333,7 @@ Shop Black Friday deals
         </div>
         </div>
         <div class="foot-panel15">
-            <div class="foot-box8">
+            <div class="foot-box">
             <span>Amazon </span>
             <br>
             <span>Business</span>
@@ -342,18 +342,18 @@ Shop Black Friday deals
             <p>Your </p>
             <p>Business</p>
         </div>
-        <div class="foot-box9">
+        <div class="foot-box">
             <span>AmazonGlobal</span>
             <p>Ship Orders</p>
             <p>Internationally</p>
         </div>
-        <div class="foot-box10">
+        <div class="foot-box">
             <span>Home Services</span>
             <p>Experienced Pros</p>
             <p>Happiness</p>
             <p>Guarantee</p>
         </div>
-        <div class="foot-box11">
+        <div class="foot-box">
             <span>Amazon Web</span>
             <br>
             <span>Services</span>
@@ -361,39 +361,27 @@ Shop Black Friday deals
             <p>computing</p>
             <p>Services</p>
         </div>
-        <div class="foot-box12">
+        <div class="foot-box">
             <span>Audible</span>
             <p>Listen to books &</p>
             <p>Original</p>
             <p>Audio Performances</p>
         </div>
-        <div class="foot-box13">
-            <span>Box Office Mojo</span>
-            <p>Find Movie</p>
-            <p>Box Office Data</p>
-        </div>
-        <div class="foot-box14">
-            <span>Goodreads</span>
-            <br>
-            <span>Book reviews</span>
-            <p>&</p>
-            <p>recommendations</p>
-        </div>
         </div>
         <div class="foot-panel15">
-            <div class="foot-box15">
+            <div class="foot-box">
             <span>IMDB</span>
             <p>Movies, TV</p>
             <p>& Celebrities</p>
         </div>
-        <div class="foot-box16">
+        <div class="foot-box">
             <span>IMDBPro</span>
             <p>Get info</p>
             <p>Entertainment</p>
             <p>professional</p>
             <p>Need</p>
         </div>
-        <div class="foot-box17">
+        <div class="foot-box">
             <span>Kindle Direct</span>
             <br>
             <span>Publishing</span>
@@ -401,7 +389,7 @@ Shop Black Friday deals
             <p>print Publishing</p>
             <p>Made easy</p>
         </div>
-        <div class="foot-box18">
+        <div class="foot-box">
             <span>Prime Video</span>
             <br>
             <span>Direct</span>
@@ -409,20 +397,10 @@ Shop Black Friday deals
             <p>Distribution</p>
             <p>Made Easy</p>
         </div>
-        <div class="foot-box19">
+        <div class="foot-box">
             <span>Shopbop</span>
             <p>Designer</p>
             <p>Fashion Brands</p>
-        </div>
-        <div class="foot-box20">
-            <span>Woot!</span>
-            <p>Deals and</p>
-            <p>Shenanigans</p>
-        </div>
-        <div class="foot-box21">
-            <span>Zappos</span>
-            <p>Shoes &</p>
-            <p>Clothing</p>
         </div>
         </div>
         
